@@ -1,3 +1,7 @@
+2022-02-09
+# fix endless loop if image can't be converted to pdf no matter how often it is tried
+# handle case if corrupt image can't be removed
+
 2022-02-08
 # minor bug fixes for logging function
 
